--- a/views/log-in.pug
+++ b/views/log-in.pug
@@ -1,9 +1,10 @@
-extends layout.pug
+
 
 block content
+    link(rel="stylesheet" href="../public/styles/login.css"
     div.login
         img(src="/images/dftb1.png" id ="loginLogo")
-
+    
         div.log-in-form
             a(href='/user/signup'  id='signUpButton') Sign up for free
             h2 Been here before? Welcome back!
