--- a/views/log-in.pug
+++ b/views/log-in.pug
@@ -1,7 +1,7 @@
 
 
 block content
-    link(rel="stylesheet" href="../public/styles/login.css"
+    link(rel="stylesheet" href="../public/stylesheets/log-in.css")
     div.login
         img(src="/images/dftb1.png" id ="loginLogo")
     
