--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -273,9 +273,11 @@ ul.allLists {
 
 .listHeader{
     padding-top: 0px;
+    color: black;
 }
 #summary-header{
     margin-top: 37px;
+    color: black;
     /* margin-left: 37px; */
 }
 
