--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
       block head
         title= title
         link(rel='stylesheet' href='/stylesheets/index.css')
+        link(rel="icon" type="image/x-icon" href="http://example.com/favicon.ico")
   body
     block content
     script(src="/javascripts/index.js")
