--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -27,7 +27,7 @@ block content
         div(id="middle-section")
             ul(class='task-index')
                 if listHeader
-                    h1= listHeader
+                    h1#summary-header= listHeader
                 else 
                     h1(id="summary-header") All Tasks
                 //- li#task-list-header Type in a task.
