--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,10 @@ html
         title= title
         link(rel='stylesheet' href='/stylesheets/index.css')
         link(rel="icon" href="/images/dftb1.png")
+        meta(name="title" property="og:title" content="Don't Forget The Baby")
+        meta(name="image" property="og:image" content="https://raw.githubusercontent.com/030820acc/Don-tForgetTheBaby/main/public/images/metapic.png")
+        meta(name="description" property="og:description" content="Don't Forget The Baby is a Remember the Milk clone made using Express and Pug. It was my first group project at App Academy.")
+        meta(name="author" content="Adam Cole, Kreston Caldwell, Enoch Tan, Anthony Adams")
   body
     block content
     script(src="/javascripts/index.js")
